<?xml version="1.0"?>
<package format="3">
  <name>hakoniwa_pdu_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge package for Hakoniwa PDU endpoints.</description>
  <maintainer email="tmori@hakoniwa-lab.net">tmori</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
